# Ralphite

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE.md  Makefile  RALPHEX_TASK.md  README.md  USER_GUIDE.md  launch-dev.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  product_readiness_polish.yaml  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml
_REFERENCE/: SRC_PLAN_MVP.md
_REFERENCE/.ralphex/: progress.md
apps/api/: Dockerfile  pyproject.toml
apps/api/src/ralphite_api/: main.py
apps/api/src/ralphite_api/api/: __init__.py  auth.py  bootstrap.py  deps.py  me.py  projects.py  runner.py  runs.py
apps/api/src/ralphite_api/core/: config.py
apps/api/src/ralphite_api/db/: runtime_migrations.py  session.py
apps/api/src/ralphite_api/models/: __init__.py  entities.py
apps/api/src/ralphite_api/schemas/: __init__.py  auth.py  projects.py  runner.py  runs.py
apps/api/src/ralphite_api/services/: auth.py  plan_service.py  plan_sync.py  plan_templates.py  run_service.py
apps/api/tests/: test_bootstrap_flow.py  test_plan_validation.py  test_project_plan_authoring.py  test_run_events_auth.py  test_run_lifecycle.py
apps/cli/: pyproject.toml
apps/cli/src/ralphite_cli/: core.py  doctoring.py  exit_codes.py  main.py
apps/cli/src/ralphite_cli/checks/: __init__.py  suites.py
apps/cli/src/ralphite_cli/commands/: __init__.py  check_cmd.py  doctor_cmd.py  history_cmd.py  init_cmd.py  quickstart_cmd.py  recover_cmd.py  replay_cmd.py  run_cmd.py  validate_cmd.py
apps/cli/tests/: test_bootstrap_e2e.py  test_cli_hard_pivot_contract.py  test_cli_output_contract.py  test_cli_recover.py  test_cli_ux_commands.py
apps/cli/tests/perf/: test_cli_perf_baseline.py
apps/runner/: pyproject.toml
apps/runner/src/ralphite_runner/: client.py  discovery.py  executor.py  main.py  state.py
apps/tui/: pyproject.toml
apps/tui/src/ralphite_tui/: cli.py
apps/tui/src/ralphite_tui/tui/: __init__.py  app_shell.py  command_palette.py  dashboard.py  editor_screen.py  system_actions.py
apps/tui/src/ralphite_tui/tui/screens/: __init__.py  artifacts_screen.py  history_screen.py  home_screen.py  migration_screen.py  phase_timeline_screen.py  recovery_screen.py  run_detail_screen.py  run_setup_screen.py  runs_screen.py  settings_screen.py  summary_screen.py
apps/tui/tests/: conftest.py  test_bootstrap_e2e.py  test_cli_output_contract.py  test_cli_recover.py  test_cli_ux_commands.py  test_phase_timeline_filters.py  test_recovery_screen_gating.py  test_run_setup_resolved_preview_contract.py  test_run_setup_validation_badges.py  test_settings_validation.py  test_shell_commands.py  test_system_actions.py
apps/web/: Dockerfile  index.html  package.json
benchmarks/: cli_baseline_spec.md
benchmarks/baseline/: post_pivot_cli.json  post_unification_compare.json  post_unification_strict_check.json  post_unification_tests.txt  post_unification_v1.json  pre_pivot_cli.json  pre_unification_env.json  pre_unification_notes.md  pre_unification_tests.txt  pre_unification_v1.json
docs/: ARCHITECTURE.md  BETA_RELEASE_CHECKLIST.md  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  USER_CENTERED_PLAYBOOK.md  index.md
docs/architecture/: failure-taxonomy.md  index.md  orchestration-templates.md  persistence-and-state.md  runtime-execution.md  security-and-trust-model.md
docs/decisions/: ADR-0001-headless-backend-default.md  ADR-0002-release-gate-policy.md  ADR-0002-strict-check-policy.md  ADR-0003-starter-plan-governance.md  ADR-0004-cli-only-hard-pivot.md  ADR-0005-single-package-v1-consolidation.md  ADR-0006-centralized-agent-defaults.md  ADR-0007-git-required-runtime.md  ADR-0008-git-authority-and-derived-recovery.md  ADR-TEMPLATE.md  index.md
docs/design-docs/: core-beliefs.md  index.md  non-goals.md  system-boundaries.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: beta-success-criteria.md  index.md  near-term-roadmap.md  operator-personas.md  release-success-criteria.md
docs/references/: cli-contracts.md  glossary.md  index.md  plan-schema-reference.md  plan-v5-schema-reference.md  test-matrix.md
docs/workflows/: beta-release.md  docs-maintenance.md  example-calendar-math-cli.md  example-thermal-1d.md  first-run.md  index.md  recovery.md  release-readiness.md
examples/: agent_defaults.yaml
examples/plans/: example_easy_calendar_math_cli.yaml  example_medium_thermal_1d_branched.yaml  starter_blue_red.yaml  starter_branched.yaml  starter_bugfix.yaml  starter_docs_update.yaml  starter_general_sps.yaml  starter_refactor.yaml  starter_release_prep.yaml
infra/: docker-compose.yml
scripts/: bench_cli.py  check_adr_requirement.sh
src/ralphite/: __init__.py
tests/cli/: conftest.py  test_bootstrap_e2e.py  test_cli_hard_pivot_contract.py  test_cli_output_contract.py  test_cli_recover.py  test_cli_ux_commands.py
(+110 files in other folders)
