[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralphite-runner"
version = "0.1.0"
description = "Ralphite local runner daemon"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32,<3",
  "pydantic>=2.8,<3",
  "pyyaml>=6.0,<7",
  "ralphite-schemas"
]

[project.scripts]
ralphite-runner = "ralphite_runner.main:main"

[tool.uv.sources]
ralphite-schemas = { workspace = true }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
